--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
 
 			<!-- SLIDER -->
-			<section id="slider" class="fullheight" style="background-image:url('_DSC3333.jpg');">
+			<section id="slider" class="fullheight" style="background-image:url('bg.jpg');">
 				<div class="overlay dark-3"><!-- dark overlay [0 to 9 opacity] --></div>
 
 				<div class="display-table">
@@ -322,8 +322,8 @@
 
 							<!-- news item -->
 							<div class="inews-item">
-								<a class="inews-thumbnail ico-rounded lightbox" href="_DSC3746.jpg" data-plugin-options="{&quot;type&quot;:&quot;image&quot;}">
-									<img class="img-responsive" src="_DSC3746.jpg" alt="image" />
+								<a class="inews-thumbnail ico-rounded lightbox" href="one.jpg" data-plugin-options="{&quot;type&quot;:&quot;image&quot;}">
+									<img class="img-responsive" src="one.jpg" alt="image" />
 								</a>
 
 								<div class="inews-item-content">
@@ -366,8 +366,8 @@
 
 							<!-- news item -->
 							<div class="inews-item">
-								<a class="inews-thumbnail ico-rounded lightbox" href="_DSC3950.jpg" data-plugin-options="{&quot;type&quot;:&quot;image&quot;}">
-									<img class="img-responsive" src="_DSC3950.jpg" alt="image" />
+								<a class="inews-thumbnail ico-rounded lightbox" href="two.jpg" data-plugin-options="{&quot;type&quot;:&quot;image&quot;}">
+									<img class="img-responsive" src="two.jpg" alt="image" />
 								</a>
 
 								<div class="inews-item-content">
@@ -410,8 +410,8 @@
 
 							<!-- news item -->
 							<div class="inews-item">
-								<a class="inews-thumbnail ico-rounded lightbox" href="_DSC3942.jpg" data-plugin-options="{&quot;type&quot;:&quot;image&quot;}">
-									<img class="img-responsive" src="_DSC3942.jpg" alt="image" />
+								<a class="inews-thumbnail ico-rounded lightbox" href="three.jpg" data-plugin-options="{&quot;type&quot;:&quot;image&quot;}">
+									<img class="img-responsive" src="three.jpg" alt="image" />
 								</a>
 
 								<div class="inews-item-content">
