changes on index file, added some hackjos 2015 info

--- a/index.html
+++ b/index.html
@@ -452,6 +452,141 @@
 							</div>
 							<!-- /news item -->
 
+							<h2>Top 3 <span class="size-18" style="color: #071981;">/ HackJos 2015!</span></h2>
+
+							<!-- news item -->
+							<div class="inews-item">
+								<a class="inews-thumbnail ico-rounded lightbox" href="assets/images/hjtf1.jpg" data-plugin-options="{&quot;type&quot;:&quot;image&quot;}">
+									<img class="img-responsive" src="assets/images/hjtf1.jpg" alt="image" />
+								</a>
+
+								<div class="inews-item-content">
+
+									<div class="inews-date-wrapper">
+										<span class="inews-date-day">1<sup><h3>st</h3></sup></span>
+										<span class="inews-date-month">Nov</span>
+										<span class="inews-date-year">2015</span>
+									</div>
+
+									<div class="inews-content-inner">
+
+										<h3 class="size-20"><a href="#" style="color: #071981!important;">Team Crystal</a></h3>
+										<ul class="blog-post-info list-inline noborder margin-bottom-20 nopadding">
+											<li>
+												<a href="page-profile.html">
+													<i class="fa fa-map-marker"></i>
+													<span class="font-lato">Unijos</span>
+												</a>
+											</li>
+											<li>
+												<i class="fa fa-hacker-news"></i>
+
+												<a class="category" href="#">
+													<span class="font-lato">Arduino</span>
+												</a>
+												<a class="category" href="#">
+													<span class="font-lato"><b>Home Automation System</b></span>
+												</a>
+											</li>
+										</ul>
+
+										<p>Comprising of <strong>Nnamdi Ibe</strong>, <strong>Emmanuel Okorie</strong> and <strong>Bebeyi Grace Abiodun</strong>, emerged the winner of the competition for their mobile-based GSM home automation system. The system uses a mobile device from anywhere in the world to control electrical appliances in the home or office. It is also able to detect temperature, light intensity and motion changes in the environment and give feedback on the state of the appliances to a mobile user interface.</p>
+									</div>
+
+
+								</div>
+							</div>
+							<!-- /news item -->
+
+							<!-- news item -->
+							<div class="inews-item">
+								<a class="inews-thumbnail ico-rounded lightbox" href="assets/images/hjtf2.jpg" data-plugin-options="{&quot;type&quot;:&quot;image&quot;}">
+									<img class="img-responsive" src="assets/images/hjtf2.jpg" alt="image" />
+								</a>
+
+								<div class="inews-item-content">
+
+									<div class="inews-date-wrapper">
+										<span class="inews-date-day">2<sup><h3>nd</h3></sup></span>
+										<span class="inews-date-month">Nov</span>
+										<span class="inews-date-year">2015</span>
+									</div>
+
+									<div class="inews-content-inner">
+
+										<h3 class="size-20"><a href="#" style="color: #071981!important;">Team Bauchi</a></h3>
+										<ul class="blog-post-info list-inline noborder margin-bottom-20 nopadding">
+											<li>
+												<a href="page-profile.html">
+													<i class="fa fa-map-marker"></i>
+													<span class="font-lato">Bauchi</span>
+												</a>
+											</li>
+											<li>
+												<i class="fa fa-hacker-news"></i>
+
+												<a class="category" href="#">
+													<span class="font-lato">Arduino</span>
+												</a>
+												<a class="category" href="#">
+													<span class="font-lato"><b>LokalShopper</b></span>
+												</a>
+											</li>
+										</ul>
+
+										<p>Made up of <strong>Sotaya Yakubu</strong> and <strong>Ibrahim Timothy Onogu</strong>,  came second in the competition with their very first web development project where they tinkered with an existing project to create LokalShopper. LokalShopper is based on the idea of ‘hooks and broadcasts’, where various information may be broadcasted within a geo-community; while at the same time, some people within the geo-community may be looking for that information. LokalShopper is targeted at retail stores who do not have the time, skills or resources to run an organized retail store.</p>
+									</div>
+
+
+								</div>
+							</div>
+							<!-- /news item -->
+
+							<!-- news item -->
+							<div class="inews-item">
+								<a class="inews-thumbnail ico-rounded lightbox" href="assets/images/hjtf3.jpg" data-plugin-options="{&quot;type&quot;:&quot;image&quot;}">
+									<img class="img-responsive" src="assets/images/hjtf3.jpg" alt="image" />
+								</a>
+
+
+								<div class="inews-item-content">
+
+									<div class="inews-date-wrapper">
+										<span class="inews-date-day">3<sup><h3>rd</h3></sup></span>
+										<span class="inews-date-month">Nov</span>
+										<span class="inews-date-year">2015</span>
+									</div>
+
+									<div class="inews-content-inner">
+
+										<h3 class="size-20"><a href="#" style="color: #071981!important;">Team Ivory</a></h3>
+										<ul class="blog-post-info list-inline noborder margin-bottom-20 nopadding">
+											<li>
+												<a href="page-profile.html">
+													<i class="fa fa-map-marker"></i>
+													<span class="font-lato">UniJos</span>
+												</a>
+											</li>
+											<li>
+												<i class="fa fa-hacker-news"></i>
+
+												<a class="category" href="#">
+													<span class="font-lato">Arduino</span>
+												</a>
+												<a class="category" href="#">
+													<span class="font-lato"><b>Smart Socket</b></span>
+												</a>
+											</li>
+										</ul>
+
+										<p>Made up of <strong>Agbo Jude Peter</strong>, <strong>Igege Precious Aduma</strong> and ,<strong>Manni Kitgwim Christopher</strong>, all students of the University of Jos who developed an app that generates a random number used in cryptography. The random number is made to be highly unpredictable and close to real phenomena like in quantum mechanics. The application of this app is to be able to encrypt files that are almost impossible to unscramble in a new concept called ‘multi-dimensional cryptography.”</p>
+									</div>
+
+
+								</div>
+							</div>
+							<!-- /news item -->
+
 						</div>
 
 						<!-- LEFT -->
@@ -520,118 +655,9 @@
 					<h3>UPCOMING EVENTS /<span class="size-16 weight-400">see you soon!</span></h3>
 
 					<div class="row">
+						<div class="col-sm-12">
 
-						<div class="col-sm-4">
-
-							<h4><i class="glyphicon glyphicon-option-vertical"></i> Ordered By Date</h4>
-
-							<div class="event-item">
-								<div class="event-date-wrapper">
-									<span class="event-date-day">02</span>
-									<span class="event-date-month">April</span>
-								</div>
-								<div class="event-content-wrapper">
-									<div class="event-content-inner-wrapper">
-										<h3 class="event-title"><a href="#">New York</a></h3>
-										<div class="event-location">Colonial Life Arena w/ Aloe Blacc </div>
-									</div>
-									<div class="event-status-wrapper">
-										<a href="#">Buy Ticket</a>
-									</div>
-								</div>
-							</div>
-
-							<div class="event-item">
-								<div class="event-date-wrapper">
-									<span class="event-date-day">03</span>
-									<span class="event-date-month">April</span>
-								</div>
-								<div class="event-content-wrapper">
-									<div class="event-content-inner-wrapper">
-										<h3 class="event-title"><a href="#">New York</a></h3>
-										<div class="event-location">Colonial Life Arena w/ Aloe Blacc </div>
-									</div>
-									<div class="event-status-wrapper">
-										<a href="#">Buy Ticket</a>
-									</div>
-								</div>
-							</div>
-
-							<div class="event-item">
-								<div class="event-date-wrapper">
-									<span class="event-date-day">04</span>
-									<span class="event-date-month">April</span>
-								</div>
-								<div class="event-content-wrapper">
-									<div class="event-content-inner-wrapper">
-										<h3 class="event-title"><a href="#">New York</a></h3>
-										<div class="event-location">Colonial Life Arena w/ Aloe Blacc </div>
-									</div>
-									<div class="event-status-wrapper">
-										<a href="#">Buy Ticket</a>
-									</div>
-								</div>
-							</div>
-
-						</div>
-
-						<div class="col-sm-4">
-
-							<h4><i class="glyphicon glyphicon-option-vertical"></i> Ordered By Title</h4>
-
-							<div class="event-item">
-								<div class="event-date-wrapper">
-									<span class="event-date-day">08</span>
-									<span class="event-date-month">April</span>
-								</div>
-								<div class="event-content-wrapper">
-									<div class="event-content-inner-wrapper">
-										<h3 class="event-title"><a href="#">New York</a></h3>
-										<div class="event-location">Colonial Life Arena w/ Aloe Blacc </div>
-									</div>
-									<div class="event-status-wrapper">
-										<a href="#">Buy Ticket</a>
-									</div>
-								</div>
-							</div>
-
-							<div class="event-item">
-								<div class="event-date-wrapper">
-									<span class="event-date-day">09</span>
-									<span class="event-date-month">April</span>
-								</div>
-								<div class="event-content-wrapper">
-									<div class="event-content-inner-wrapper">
-										<h3 class="event-title"><a href="#">New York</a></h3>
-										<div class="event-location">Colonial Life Arena w/ Aloe Blacc </div>
-									</div>
-									<div class="event-status-wrapper">
-										<a href="#">Buy Ticket</a>
-									</div>
-								</div>
-							</div>
-
-							<div class="event-item">
-								<div class="event-date-wrapper">
-									<span class="event-date-day">10</span>
-									<span class="event-date-month">April</span>
-								</div>
-								<div class="event-content-wrapper">
-									<div class="event-content-inner-wrapper">
-										<h3 class="event-title"><a href="#">New York</a></h3>
-										<div class="event-location">Colonial Life Arena w/ Aloe Blacc </div>
-									</div>
-									<div class="event-status-wrapper">
-										<a href="#">Buy Ticket</a>
-									</div>
-								</div>
-							</div>
-
-						</div>
-
-						<div class="col-sm-4">
-
-							<h4><i class="glyphicon glyphicon-option-vertical"></i> Order Randomly</h4>
+							<h4><i class="glyphicon glyphicon-option-vertical"></i>Order Of Events</h4>
 
 							<div class="event-item">
 								<div class="event-date-wrapper">
@@ -693,37 +719,15 @@
 			<section class="nopadding">
 				<div class="container">
 					<ul class="nav nav-tabs nav-justified">
-						<li class="active"><a href="#home" data-toggle="tab">Individual</a></li>
-						<li><a href="#profile" data-toggle="tab">Team</a></li>
-						<li><a href="#profile" data-toggle="tab">Conference</a></li>
+						<li><a href="#conference" data-toggle="tab">Conference</a></li>
+						<li class="active"><a href="#single" data-toggle="tab">Individual</a></li>
+						<li><a href="#team" data-toggle="tab">Team</a></li>
 					</ul>
-
-					<div class="tab-content">
-						<div class="tab-pane fade in active" id="home">
-							<p>Raw denim you probably haven't heard of them jean shorts Austin.</p>
-						</div>
-						<div class="tab-pane fade" id="profile">
-							<p>Food truck fixie locavore, accusamus mcsweeney's marfa nulla single-origin coffee squid.</p>
-						</div>
-					</div>
-					<!-- Nav tabs -->
-					<ul class="nav nav-tabs" role="tablist">
-						<li class="nav-item active">
-							<a class="nav-link active" data-toggle="tab" href="#single" role="tab">Individual</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" data-toggle="tab" href="#team" role="tab">Team</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" data-toggle="tab" href="#conference" role="tab">Conference</a>
-						</li>
-					</ul>
-
 					<!-- Tab panes -->
 					<div class="tab-content">
 						<div class="tab-pane active" id="single" role="tabpanel">
 							<header class="text-center margin-bottom-60 clearfix">
-								<h2 class="weight-300 nomargin-bottom">TICKET <span><strong>RESERVATION</strong></span></h2>
+								<h2 class="weight-300 nomargin-bottom">Individual <span><strong>Registration</strong></span></h2>
 							</header>
 
 							<form class="validate" action="php/contact.php" method="post" data-success="Reservation sent! Thank you!" data-toastr-position="bottom-right">
@@ -742,33 +746,8 @@
 
 								</div>
 								<div class="row">
-
 									<div class="col-md-4">
-										<input type="text" id="reservation_date" name="reservation_date" class="form-control datepicker required" data-format="yyyy-mm-dd" data-lang="en" data-RTL="false" placeholder="Reservation Date*">
-									</div>
-
-									<div class="col-md-4">
-										<select id="reservation_people" name="reservation_people" class="form-control required">
-											<option value="1">1 Person</option>
-											<option value="2" selected="selected">2 People</option>
-											<option value="3">3 People</option>
-											<option value="4">4 People</option>
-											<option value="5">5 People</option>
-											<option value="6">6 People</option>
-											<option value="7">7 People</option>
-											<option value="8">8 People</option>
-											<option value="9">9 People</option>
-											<option value="10">10 People</option>
-											<option value="12">12 People</option>
-											<option value="15">15 People</option>
-											<option value="20">20 People</option>
-											<option value="25">25 People</option>
-											<option value="30">30 People</option>
-										</select>
-									</div>
-
-									<div class="col-md-4">
-										<button class="btn btn-success btn-block" type="submit">SUBMIT RESERVATION</button>
+										<button class="btn btn-success btn-block" type="submit">SUBMIT</button>
 									</div>
 
 								</div>
@@ -778,7 +757,7 @@
 						</div>
 						<div class="tab-pane" id="team" role="tabpanel">
 							<header class="text-center margin-bottom-60 clearfix">
-								<h2 class="weight-300 nomargin-bottom">TICKET <span><strong>RESERVATION</strong></span></h2>
+								<h2 class="weight-300 nomargin-bottom">Team <span><strong>Registration</strong></span></h2>
 							</header>
 
 							<form class="validate" action="php/contact.php" method="post" data-success="Reservation sent! Thank you!" data-toastr-position="bottom-right">
@@ -797,33 +776,8 @@
 
 								</div>
 								<div class="row">
-
 									<div class="col-md-4">
-										<input type="text" id="reservation_date" name="reservation_date" class="form-control datepicker required" data-format="yyyy-mm-dd" data-lang="en" data-RTL="false" placeholder="Reservation Date*">
-									</div>
-
-									<div class="col-md-4">
-										<select id="reservation_people" name="reservation_people" class="form-control required">
-											<option value="1">1 Person</option>
-											<option value="2" selected="selected">2 People</option>
-											<option value="3">3 People</option>
-											<option value="4">4 People</option>
-											<option value="5">5 People</option>
-											<option value="6">6 People</option>
-											<option value="7">7 People</option>
-											<option value="8">8 People</option>
-											<option value="9">9 People</option>
-											<option value="10">10 People</option>
-											<option value="12">12 People</option>
-											<option value="15">15 People</option>
-											<option value="20">20 People</option>
-											<option value="25">25 People</option>
-											<option value="30">30 People</option>
-										</select>
-									</div>
-
-									<div class="col-md-4">
-										<button class="btn btn-success btn-block" type="submit">SUBMIT RESERVATION</button>
+										<button class="btn btn-success btn-block" type="submit">SUBMIT</button>
 									</div>
 
 								</div>
@@ -831,7 +785,36 @@
 
 							</form>
 						</div>
-						<div class="tab-pane" id="conference" role="tabpanel">...</div>
+						<div class="tab-pane" id="conference" role="tabpanel">
+							<header class="text-center margin-bottom-60 clearfix">
+								<h2 class="weight-300 nomargin-bottom">Conference <span><strong>Reservation</strong></span></h2>
+							</header>
+
+							<form class="validate" action="php/contact.php" method="post" data-success="Reservation sent! Thank you!" data-toastr-position="bottom-right">
+								<div class="row">
+									<div class="col-md-4">
+										<input type="text" id="reservation_name" name="reservation_name" class="form-control required" placeholder="Name*">
+									</div>
+
+									<div class="col-md-4">
+										<input type="email" id="reservation_email" name="reservation_email" class="form-control required" placeholder="Email*">
+									</div>
+
+									<div class="col-md-4">
+										<input type="text" id="reservation_phone" name="reservation_phone" class="form-control required" placeholder="Phone*">
+									</div>
+
+								</div>
+								<div class="row">
+									<div class="col-md-4">
+										<button class="btn btn-success btn-block" type="submit">SUBMIT</button>
+									</div>
+
+								</div>
+
+
+							</form>
+						</div>
 					</div>
 				</div>
 			</section>
