--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 						<!-- RIGHT -->
 						<div class="col-lg-9 col-md-9 col-sm-9 col-lg-push-3 col-md-push-3 col-sm-push-3">
 
-							<h2>Top 3 <span class="size-18">/ HackJos 2016!</span></h2>
+							<h2 style="color: #00a15b !important;">Top 3 <span class="size-18">/ HackJos 2016!</span></h2>
 
 							<!-- news item -->
 							<div class="inews-item">
@@ -336,7 +336,7 @@
 
 									<div class="inews-content-inner">
 
-										<h3 class="size-20"><a href="#">Team Bradsa</a></h3>
+										<h3 class="size-20"><a href="#" style="color: #00a15b !important;">Team Bradsa</a></h3>
 										<ul class="blog-post-info list-inline noborder margin-bottom-20 nopadding">
 											<li>
 												<a href="page-profile.html">
@@ -380,7 +380,7 @@
 
 									<div class="inews-content-inner">
 
-										<h3 class="size-20"><a href="#">Team Ivory</a></h3>
+										<h3 class="size-20"><a href="#" style="color: #00a15b !important;">Team Ivory</a></h3>
 										<ul class="blog-post-info list-inline noborder margin-bottom-20 nopadding">
 											<li>
 												<a href="page-profile.html">
@@ -424,7 +424,7 @@
 
 									<div class="inews-content-inner">
 
-										<h3 class="size-20"><a href="#">Team Canon</a></h3>
+										<h3 class="size-20"><a href="#" style="color: #00a15b !important;">Team Canon</a></h3>
 										<ul class="blog-post-info list-inline noborder margin-bottom-20 nopadding">
 											<li>
 												<a href="page-profile.html">
